[gd_scene load_steps=14 format=3 uid="uid://c0j0kxwgx6j61"]

[ext_resource type="Script" uid="uid://bnjd264qd6cxt" path="res://UpgradeComponents/FruitArea/fruit_area.gd" id="1_xbbuw"]
[ext_resource type="Texture2D" uid="uid://bl2a3j25oi4bp" path="res://UpgradeComponents/FruitArea/FruitArea.svg" id="2_k2vqn"]
[ext_resource type="Texture2D" uid="uid://dob5ayytpabhr" path="res://UpgradeComponents/FruitArea/FruitAreaPressed.svg" id="3_f0ey0"]
[ext_resource type="Texture2D" uid="uid://bh1vxyjtxdfaf" path="res://UpgradeComponents/FruitArea/FruitAreaProgression.svg" id="4_2seqf"]
[ext_resource type="Texture2D" uid="uid://dnbllgiivo7ym" path="res://VisualEffects/ParticleSprite.svg" id="4_f0ey0"]

[sub_resource type="SpriteFrames" id="SpriteFrames_2seqf"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_k2vqn")
}, {
"duration": 1.0,
"texture": ExtResource("3_f0ey0")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_k2vqn"]
size = Vector2(200, 200)

[sub_resource type="Animation" id="Animation_2seqf"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CPUParticles2D:lifetime")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.8]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("FruitAreaSprite:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("FruitAreaSprite/HeldDownProgression:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1e-05, 1e-05)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("SuccessParticles:emitting")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath(".:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_k2vqn"]
resource_name = "appear"
length = 1.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CPUParticles2D:lifetime")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.14972, 1.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.5, 0.5, 3.6]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("FruitAreaSprite:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_bxkus"]
resource_name = "held_down"
length = 3.7
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FruitAreaSprite/HeldDownProgression:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 3.2, 3.5),
"transitions": PackedFloat32Array(0.574349, 0.535887, 1),
"update": 0,
"values": [Vector2(1e-05, 1e-05), Vector2(1, 1), Vector2(1.12, 1.12)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CPUParticles2D:lifetime")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [3.6]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("FruitAreaSprite:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("SuccessParticles:emitting")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(3.2),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath(".:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 3.56667, 3.7),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1, 1), Vector2(1e-05, 1e-05)]
}
tracks/5/type = "method"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath(".")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(3.2, 3.7),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [],
"method": &"set_held_long_enough"
}, {
"args": [],
"method": &"self_destruct"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_f0ey0"]
_data = {
&"RESET": SubResource("Animation_2seqf"),
&"appear": SubResource("Animation_k2vqn"),
&"held_down": SubResource("Animation_bxkus")
}

[sub_resource type="Gradient" id="Gradient_bxkus"]
offsets = PackedFloat32Array(0.401099, 0.612637)
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="Gradient" id="Gradient_eyshr"]
colors = PackedColorArray(0.57, 0.57, 0.57, 1, 1, 1, 1, 1)

[node name="FruitArea" type="Node2D"]
script = ExtResource("1_xbbuw")

[node name="FruitAreaSprite" type="AnimatedSprite2D" parent="."]
self_modulate = Color(1, 1, 1, 0)
sprite_frames = SubResource("SpriteFrames_2seqf")
frame_progress = 0.304416

[node name="HeldDownProgression" type="Sprite2D" parent="FruitAreaSprite"]
scale = Vector2(1e-05, 1e-05)
texture = ExtResource("4_2seqf")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8192

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_k2vqn")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_f0ey0")
}

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
amount = 53
texture = ExtResource("4_f0ey0")
lifetime = 0.8
emission_shape = 3
emission_rect_extents = Vector2(112.49, 83.625)
gravity = Vector2(0, -20)
scale_amount_min = 0.05
scale_amount_max = 0.3
color = Color(0.94, 0.717377, 0.4794, 1)
color_ramp = SubResource("Gradient_bxkus")
color_initial_ramp = SubResource("Gradient_eyshr")

[node name="SuccessParticles" type="CPUParticles2D" parent="."]
position = Vector2(0, -20)
emitting = false
amount = 103
texture = ExtResource("4_f0ey0")
lifetime = 0.87
one_shot = true
explosiveness = 0.95
emission_shape = 3
emission_rect_extents = Vector2(112.49, 94.79)
direction = Vector2(0, -1)
gravity = Vector2(0, 400)
initial_velocity_min = 101.12
initial_velocity_max = 162.92
scale_amount_min = 0.1
scale_amount_max = 0.5
color = Color(0.94, 0.717377, 0.4794, 1)
color_ramp = SubResource("Gradient_bxkus")
color_initial_ramp = SubResource("Gradient_eyshr")

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_area_2d_area_exited"]
